# Pixie

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  alien.pixie  build.sh  build.sh (obsolete)  contributing.md  imgui.ini  output.ppm  planned_bugfixes.md  planned_features.md  super_mushroom.pixie
config/: sweetie-16.colors
include/: color_palette.hpp  editor.h  editor.hpp  export.h  export.hpp  macros.h  macros.hpp  rgba.h  rgba.hpp  rng.hpp  size.hpp  stb_image_write.h  window.h  window.hpp
include/ui/: ui_button.h  ui_color.h  ui_color_button.h  ui_color_grid.h  ui_color_palette.h  ui_font.h  ui_position.h  ui_size.h  ui_slider.h  ui_window.h
palettes/: lost-century.colors  lost-century.palette  sweetie-16.colors  sweetie-16.palette  tempoppy-witchy-muted.colors  tempoppy-witchy-muted.palette
src/: color_palette.cpp  editor.cpp  export.cpp  main.cpp  rng.cpp  ui_button.cpp  ui_color_button.cpp  ui_color_grid.cpp  ui_color_palette.cpp  ui_font.cpp  ui_slider.cpp  ui_window.cpp  window.cpp
